2010-06-06  vadim  <vadim@vk.crocodile.org>

	* UserWorkflow.cpp (UserWorkflow::flagsToQueryString): added user
	workflow progress flags for an attempted install and first
	successful install. Both flags are boolean true/false indicating
	that the even occurred. We do not track and do not report any
	information about the firewall, platform, rules etc. These flags
	will be used to determine how many users abandon the program
	before even trying to run install for real because it is too
	complicated or the UI is not good enough. Fixes #1495

	* UserWorkflow.cpp (UserWorkflow::flagsToQueryString): added user
	workflow flag indicating that ssh/scp have been configured in the
	Prefereces dialog. The flag is boolean and registers only the fact
	that something was entered in ssh and scp fields. Actual path and
	programs used are not registered and reported. Fixes #1496

2010-06-03  vadim  <vadim@vk.crocodile.org>

	* v4.0.1 released

2010-06-02  vadim  <vadim@vk.crocodile.org>

	* Preprocessor.cpp (Preprocessor::findMultiAddressObjectsUsedInRules):
	change in libfwbuilder: fixed #1485 "dns name object is recognized
	as an empty group when it appears in shared rule set"

2010-06-02 yalovoy <yalovoy@gmail.com>

	* fixes #1484 "paste below" function pastes rules out of order
	1) copy 2 complete rules
	2) go to a(nother) policy
	3) right click on rule 0, say "paste rules below"
	=> BUG: the two rules from the buffer become rules 0+2, the original
	rule 0 becomes rule 1
	The original should stay rule 0, the two from buffer become 1+2
	Affected files: FWCmdRule.cpp, FWCmdRule.h, RuleSetView.cpp

2010-06-01  vadim  <vadim@vk.crocodile.org>

	* Help.cpp (Help::downloadComplete): fixed #1482 Class Help should
	open window only after successful download

	* ObjConflictResolutionDialog.cpp (ObjConflictResolutionDialog::run):
	refs #1483 If program detects change in CustomService object and
	the change just adds code string for a platform that was not